ajout des pages de la palette du gout, le délice des sens et la note enchantée ainsi que des modifications sur l'html de la page d'accueil et à la française

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>A la française</title>
+        <title>La note enchantée</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width,initial-scale=1.0"/>
         <link rel="stylesheet" href="styles/normalise.css"/>
@@ -18,9 +18,9 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/a_la_française.jpg" class="accueil_image">
+                <img src="images/restaurants/la_note_enchantee.jpg" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
-                    <h2 class="accueil_nom">à la française</h2>
+                    <h2 class="accueil_nom">La note enchantée</h2>
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
@@ -29,8 +29,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Tartare de poulpe acidulé</span> <br>
-                            <span class="list_description">Aux zests d'orange</span>                        </div>
+                            <span class="list_nom_du_plat">Ravioles de foie gras</span> <br>
+                            <span class="list_description">Accompagnés de leur crème à la truffe</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
@@ -38,8 +38,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Velouté de légumes d'antan</span> <br>
-                            <span class="list_description">Carotte, panais, topinambour</span>
+                            <span class="list_nom_du_plat">Caviar osciètre</span> <br>
+                            <span class="list_description">Sur blini à la farine de blé noir</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
@@ -48,11 +48,21 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Soupe à l'oignon</span> <br>
-                            <span class="list_description">Revisitée</span>       
+                            <span class="list_nom_du_plat">Homard et espuma de...</span> <br>
+                            <span class="list_description">Mariné aux zests d'orange</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
+                    </div>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Foie gra de canard cuit entier</span> <br>
+                            <span class="list_description">Confiture de figue et pain toasté</span>       
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix"> 35€</div>
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
@@ -63,8 +73,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Coquilles Saint-Jacques</span> <br>
-                            <span class="list_description">Accompagnées d'une purée de panais</span>
+                            <span class="list_nom_du_plat">Noix de coquilles Saint-Jacques</span> <br>
+                            <span class="list_description">Sur lit de purée de céleri-rave</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
@@ -73,8 +83,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Magret de canard</span> <br>
-                            <span class="list_description"> Et parmentier de pommes de terres</span>
+                            <span class="list_nom_du_plat"> Langoustine poêlée</span> <br>
+                            <span class="list_description"> Purée de patate douce</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
@@ -83,8 +93,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span> <br>
-                            <span class="list_description">Sur son lit de gnocchis aux légumes</span>
+                            <span class="list_nom_du_plat">Mijoté de queue de boeuf </span> <br>
+                            <span class="list_description">Et riz sauvage aux zests de citron</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
@@ -98,8 +108,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pétales de violettes glacés</span> <br>
-                            <span class="list_description">Et purée de noisettes</span>
+                            <span class="list_nom_du_plat">Macaron noisette et chocolat</span> <br>
+                            <span class="list_description">Glace au caramel brun et sel de Guérande</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
@@ -108,8 +118,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Fondant au chocolat</span> <br>
-                            <span class="list_description">Revisité</span>
+                            <span class="list_nom_du_plat">Baba au rhum revisité</span> <br>
+                            <span class="list_description">Avec son coulis de citron</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
@@ -118,8 +128,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Millefeuille croustillant</span> <br>
-                            <span class="list_description">Myrtilles et pâte d'amande</span>
+                            <span class="list_nom_du_plat">Tarte au citron meringuée</span> <br>
+                            <span class="list_description">Destructurée</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
