--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>A la française</title>
+        <title>La palette du gout</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width,initial-scale=1.0"/>
         <link rel="stylesheet" href="styles/normalise.css"/>
@@ -18,9 +18,9 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/a_la_française.jpg" class="accueil_image">
+                <img src="images/restaurants/la_palette_du_gout.jpg" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
-                    <h2 class="accueil_nom">à la française</h2>
+                    <h2 class="accueil_nom">la palette du goût</h2>
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
@@ -29,8 +29,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Tartare de poulpe acidulé</span> <br>
-                            <span class="list_description">Aux zests d'orange</span>                        </div>
+                            <span class="list_nom_du_plat">Fricassée d'escargot</span> <br>
+                            <span class="list_description">Au piment d'espelette</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
@@ -38,8 +38,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Velouté de légumes d'antan</span> <br>
-                            <span class="list_description">Carotte, panais, topinambour</span>
+                            <span class="list_nom_du_plat">Foie gras de canard mi-cuit</span> <br>
+                            <span class="list_description">Et ses copeaux de truffe noire</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
@@ -48,8 +48,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Soupe à l'oignon</span> <br>
-                            <span class="list_description">Revisitée</span>       
+                            <span class="list_nom_du_plat">Oeuf au plat</span> <br>
+                            <span class="list_description">Assaisonné à la truffe sur lit de caviar</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
@@ -63,8 +63,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Coquilles Saint-Jacques</span> <br>
-                            <span class="list_description">Accompagnées d'une purée de panais</span>
+                            <span class="list_nom_du_plat">Filet de boeuf aux herbes</span> <br>
+                            <span class="list_description">Accompagné de sa ribambelle de légumes</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
@@ -73,8 +73,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Magret de canard</span> <br>
-                            <span class="list_description"> Et parmentier de pommes de terres</span>
+                            <span class="list_nom_du_plat">Parmentier de queue de boeuf</span> <br>
+                            <span class="list_description"> A la truffe noire sur sa purée de panais</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
@@ -83,8 +83,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span> <br>
-                            <span class="list_description">Sur son lit de gnocchis aux légumes</span>
+                            <span class="list_nom_du_plat">Filet de Turbot</span> </span> <br>
+                            <span class="list_description">Aux agrumes</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
@@ -98,8 +98,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pétales de violettes glacés</span> <br>
-                            <span class="list_description">Et purée de noisettes</span>
+                            <span class="list_nom_du_plat">Paris-Brest</span> <br>
+                            <span class="list_description">Revisité</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
@@ -108,8 +108,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Fondant au chocolat</span> <br>
-                            <span class="list_description">Revisité</span>
+                            <span class="list_nom_du_plat">Macaron au chocolat d'exception</span> <br>
+                            <span class="list_description">Et glace à la vanille de Madagascar</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
@@ -118,8 +118,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Millefeuille croustillant</span> <br>
-                            <span class="list_description">Myrtilles et pâte d'amande</span>
+                            <span class="list_nom_du_plat">Mousse au chocolat </span> <br>
+                            <span class="list_description">Au piment d'espelette et à la truffe noire</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
