--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/5e5ae3f075.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body >
+        <div class="spin"></div>
         <header class="header">
             <h1 class="header_logo">ohmyfood</h1>
         </header>
@@ -104,7 +105,7 @@
                                     <h3 class="restaurants_nom">le délice des sens</h3>
                                     <span class="restaurants_lieu"> Folie-Méricourt</span>
                                 </div>
-                                <i class="far fa-heart restaurants_coeur"></i>
+                                <a href="#" class="restaurants_coeur lien"><i class="far fa-heart "></i></a>
                             </div>
                         </a>
                     </div>
