--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>A la française</title>
+        <title>Le délice des sens</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width,initial-scale=1.0"/>
         <link rel="stylesheet" href="styles/normalise.css"/>
@@ -18,9 +18,9 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/a_la_française.jpg" class="accueil_image">
+                <img src="images/restaurants/le_delice_des_sens.jpg" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
-                    <h2 class="accueil_nom">à la française</h2>
+                    <h2 class="accueil_nom">le délice des sens</h2>
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
@@ -29,8 +29,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Tartare de poulpe acidulé</span> <br>
-                            <span class="list_description">Aux zests d'orange</span>                        </div>
+                            <span class="list_nom_du_plat">Tartare de thon</span> <br>
+                            <span class="list_description">Assaisoné au yuzu</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
@@ -38,8 +38,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Velouté de légumes d'antan</span> <br>
-                            <span class="list_description">Carotte, panais, topinambour</span>
+                            <span class="list_nom_du_plat">Bouchée de homard croustillant</span> <br>
+                            <span class="list_description">Et sa farandole de petits légumes</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
@@ -48,8 +48,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Soupe à l'oignon</span> <br>
-                            <span class="list_description">Revisitée</span>       
+                            <span class="list_nom_du_plat">Velouté de cèpes</span> <br>
+                            <span class="list_description">Aux truffes</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
@@ -63,8 +63,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Coquilles Saint-Jacques</span> <br>
-                            <span class="list_description">Accompagnées d'une purée de panais</span>
+                            <span class="list_nom_du_plat">Poulet rôti aux herbes de provence</span> <br>
+                            <span class="list_description">Et sa crème de truffe</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
@@ -73,8 +73,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Magret de canard</span> <br>
-                            <span class="list_description"> Et parmentier de pommes de terres</span>
+                            <span class="list_nom_du_plat">Langouste rôtie</span> <br>
+                            <span class="list_description">Et ses légumes de saison</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
@@ -83,8 +83,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span> <br>
-                            <span class="list_description">Sur son lit de gnocchis aux légumes</span>
+                            <span class="list_nom_du_plat">Côte de boeuf angus </span> <br>
+                            <span class="list_description">Et sa purée de panais</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
@@ -98,8 +98,8 @@
                 <div class="list_ls">
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Pétales de violettes glacés</span> <br>
-                            <span class="list_description">Et purée de noisettes</span>
+                            <span class="list_nom_du_plat">Farandole de desserts</span> <br>
+                            <span class="list_description">Du chef</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
@@ -108,8 +108,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Fondant au chocolat</span> <br>
-                            <span class="list_description">Revisité</span>
+                            <span class="list_nom_du_plat">Crème brulée</span> <br>
+                            <span class="list_description">Revisitée</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
@@ -118,8 +118,8 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Millefeuille croustillant</span> <br>
-                            <span class="list_description">Myrtilles et pâte d'amande</span>
+                            <span class="list_nom_du_plat">Tiramisu</span> <br>
+                            <span class="list_description">A la noisette</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
