ajout de l'animation du bouton j'aime (heart)

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="list_plat_et_tarif">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Foie gra de canard cuit entier</span> <br>
+                            <span class="list_nom_du_plat">Foie gras de canard cuit entier</span> <br>
                             <span class="list_description">Confiture de figue et pain toasté</span>       
                         </div>
                         <div class="list_prix_et_check">
