--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/5e5ae3f075.js" crossorigin="anonymous"></script>
     </head>
-    <body >
+    <body class="body">
         <div class="spin"></div>
         <header class="header">
             <h1 class="header_logo">ohmyfood</h1>
@@ -62,7 +62,10 @@
                                 <h3 class="restaurants_nom">la palette du goût</h3>
                                 <span class="restaurants_lieu"> Ménilmontant</span>
                             </div>
-                            <i class="far fa-heart restaurants_coeur"></i>
+                            <div class="coeurs">
+                                <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                            </div>
                         </div>
                         </a>
                     </div>
@@ -77,7 +80,10 @@
                                     <h3 class="restaurants_nom">la note enchantée</h3>
                                     <span class="restaurants_lieu"> Charonne</span>
                                 </div>
-                                <i class="far fa-heart restaurants_coeur"></i>
+                                <div class="coeurs">
+                                    <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                    <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -91,7 +97,10 @@
                                     <h3 class="restaurants_nom">à la française</h3>
                                     <span class="restaurants_lieu"> Cité Rouge</span>
                                 </div>
-                                <i class="far fa-heart restaurants_coeur"></i>
+                                <div class="coeurs">
+                                    <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                    <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -105,7 +114,10 @@
                                     <h3 class="restaurants_nom">le délice des sens</h3>
                                     <span class="restaurants_lieu"> Folie-Méricourt</span>
                                 </div>
-                                <a href="#" class="restaurants_coeur lien"><i class="far fa-heart "></i></a>
+                                <div class="coeurs">
+                                    <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                    <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                </div>
                             </div>
                         </a>
                     </div>
