Ajout du spinner et de l'animation au hover des plats

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -33,7 +33,7 @@
                             <span class="list_description">Aux zests d'orange</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif">
@@ -43,7 +43,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>                        
                     </div>
                     <div class="list_plat_et_tarif">
@@ -53,7 +53,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif">
@@ -77,8 +77,8 @@
                             <span class="list_description"> Et parmentier de pommes de terres</span>
                         </div>
                         <div class="list_prix_et_check">
-                            <div class="list_prix">35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <span class="list_prix">35€</span>
+                            <span class="list_check"><i class="fas fa-check-circle check"></i></span>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
