--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
         <title>OhMyfood</title>
         <meta charset="UTF-8">
         <meta name="viewport" content= "width=device-width,initial-scale=1.0"/>
-        <link rel="stylesheet" href="styles/normalise.css"/>
-        <link rel="stylesheet" href="sass/style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/normalise.css"/>
+        <link rel="stylesheet" href="sass/style.css"/>
+         
         <script src="https://kit.fontawesome.com/5e5ae3f075.js" crossorigin="anonymous"></script>
     </head>
     <body class="body">
-        <div class="spin"></div>
-        <header class="header">
+        <section class="section">
+            <div class="loader load1"></div>
+            <div class="loader load2"></div>
+            <div class="loader load3"></div>
+            <div class="text">ohmyfood ...</div>
+        </section>
+        <div class="content">
+        <header class="body_header">
             <h1 class="header_logo">ohmyfood</h1>
         </header>
-        <main>
+        <main class="body_main">
             <section class="description">
                 <div class="description_position">
                     <i class="fas fa-map-marker-alt description_icone"></i> 
@@ -143,5 +150,6 @@
                 </li>
             </ul>
         </footer>
+        </div>
     </body>
 </html>
