ajout de l'animmation de chargement des plats

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -27,7 +27,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Entrées</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Tartare de poulpe acidulé</span> <br>
                             <span class="list_description">Aux zests d'orange</span>                        </div>
@@ -36,7 +36,7 @@
                             <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Velouté de légumes d'antan</span> <br>
                             <span class="list_description">Carotte, panais, topinambour</span>
@@ -46,7 +46,7 @@
                             <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>                        
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Soupe à l'oignon</span> <br>
                             <span class="list_description">Revisitée</span>       
@@ -61,7 +61,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat"> Plats</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Coquilles Saint-Jacques</span> <br>
                             <span class="list_description">Accompagnées d'une purée de panais</span>
@@ -71,7 +71,7 @@
                             <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Magret de canard</span> <br>
                             <span class="list_description"> Et parmentier de pommes de terres</span>
@@ -81,7 +81,7 @@
                             <span class="list_check"><i class="fas fa-check-circle check"></i></span>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span> <br>
                             <span class="list_description">Sur son lit de gnocchis aux légumes</span>
@@ -96,7 +96,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Desserts</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Pétales de violettes glacés</span> <br>
                             <span class="list_description">Et purée de noisettes</span>
@@ -106,7 +106,7 @@
                             <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Fondant au chocolat</span> <br>
                             <span class="list_description">Revisité</span>
@@ -116,7 +116,7 @@
                             <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Millefeuille croustillant</span> <br>
                             <span class="list_description">Myrtilles et pâte d'amande</span>
@@ -129,7 +129,9 @@
                 </div>
             </section>
             <section class="commander">
-            <div class="bouton">Commander</div>
+                <a href="#" class="lien">
+                    <div class="bouton">Commander</div>
+                </a>
             </section>
         </main>
         <footer class="footer">
