--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -27,7 +27,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Entrées</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Fricassée d'escargot</span> <br>
                             <span class="list_description">Au piment d'espelette</span>                        </div>
@@ -36,7 +36,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Foie gras de canard mi-cuit</span> <br>
                             <span class="list_description">Et ses copeaux de truffe noire</span>
@@ -46,7 +46,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>                        
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Oeuf au plat</span> <br>
                             <span class="list_description">Assaisonné à la truffe sur lit de caviar</span>       
@@ -61,7 +61,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat"> Plats</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Filet de boeuf aux herbes</span> <br>
                             <span class="list_description">Accompagné de sa ribambelle de légumes</span>
@@ -71,7 +71,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Parmentier de queue de boeuf</span> <br>
                             <span class="list_description"> A la truffe noire sur sa purée de panais</span>
@@ -81,7 +81,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Filet de Turbot</span> </span> <br>
                             <span class="list_description">Aux agrumes</span>
@@ -96,7 +96,7 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Desserts</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Paris-Brest</span> <br>
                             <span class="list_description">Revisité</span>
@@ -106,7 +106,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Macaron au chocolat d'exception</span> <br>
                             <span class="list_description">Et glace à la vanille de Madagascar</span>
@@ -116,7 +116,7 @@
                             <div class="list_check"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Mousse au chocolat </span> <br>
                             <span class="list_description">Au piment d'espelette et à la truffe noire</span>
@@ -129,7 +129,9 @@
                 </div>
             </section>
             <section class="commander">
-            <div class="bouton">Commander</div>
+                <a href="#" class="lien">
+                    <div class="bouton">Commander</div>
+                </a>
             </section>
         </main>
         <footer class="footer">
