--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -27,43 +27,43 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Entrées</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Ravioles de foie gras</span> <br>
                             <span class="list_description">Accompagnés de leur crème à la truffe</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Caviar osciètre</span> <br>
                             <span class="list_description">Sur blini à la farine de blé noir</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>                        
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Homard et espuma de...</span> <br>
                             <span class="list_description">Mariné aux zests d'orange</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif fourth">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Foie gras de canard cuit entier</span> <br>
                             <span class="list_description">Confiture de figue et pain toasté</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -71,34 +71,34 @@
             <section class="list">
                 <h3 class="list_type_du_plat"> Plats</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Noix de coquilles Saint-Jacques</span> <br>
                             <span class="list_description">Sur lit de purée de céleri-rave</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat"> Langoustine poêlée</span> <br>
                             <span class="list_description"> Purée de patate douce</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Mijoté de queue de boeuf </span> <br>
                             <span class="list_description">Et riz sauvage aux zests de citron</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -106,40 +106,42 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Desserts</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Macaron noisette et chocolat</span> <br>
                             <span class="list_description">Glace au caramel brun et sel de Guérande</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Baba au rhum revisité</span> <br>
                             <span class="list_description">Avec son coulis de citron</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Tarte au citron meringuée</span> <br>
                             <span class="list_description">Destructurée</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="commander">
-            <div class="bouton">Commander</div>
+                <a href="#" class="lien">
+                    <div class="bouton">Commander</div>
+                </a>
             </section>
         </main>
         <footer class="footer">
