--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -27,33 +27,33 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Entrées</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Tartare de thon</span> <br>
                             <span class="list_description">Assaisoné au yuzu</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Bouchée de homard croustillant</span> <br>
                             <span class="list_description">Et sa farandole de petits légumes</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>                        
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Velouté de cèpes</span> <br>
                             <span class="list_description">Aux truffes</span>       
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -61,34 +61,34 @@
             <section class="list">
                 <h3 class="list_type_du_plat"> Plats</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Poulet rôti aux herbes de provence</span> <br>
                             <span class="list_description">Et sa crème de truffe</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Langouste rôtie</span> <br>
                             <span class="list_description">Et ses légumes de saison</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Côte de boeuf angus </span> <br>
                             <span class="list_description">Et sa purée de panais</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -96,40 +96,42 @@
             <section class="list">
                 <h3 class="list_type_du_plat">Desserts</h3>
                 <div class="list_ls">
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif first">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Farandole de desserts</span> <br>
                             <span class="list_description">Du chef</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif second">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Crème brulée</span> <br>
                             <span class="list_description">Revisitée</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
-                    <div class="list_plat_et_tarif">
+                    <div class="list_plat_et_tarif third">
                         <div class="list_plat">
                             <span class="list_nom_du_plat">Tiramisu</span> <br>
                             <span class="list_description">A la noisette</span>
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="commander">
-            <div class="bouton">Commander</div>
+                <a href="#" class="lien">
+                    <div class="bouton">Commander</div>
+                </a>
             </section>
         </main>
         <footer class="footer">
